# niyakrish-invoice

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  deploy-frontend.yml  security-scan.yml
docs/: api-spec.md  architecture.md  cloud-deployment.md  database-schema.md  deployment.md  development-roadmap.md  mvp-plan.md
frontend/: .env.example  Dockerfile  index.html  invoice_mobile_1.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/public/: invoice.html
frontend/src/: App.tsx  index.css  main.tsx
infra/nginx/: nginx.conf
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/railway/: README.md
infra/redis/: redis.conf
invoice-app/: index.html
invoice-app/.vercel/: project.json
invoice-app/js/: auth.js  cloud.js  config.js  dashboard.js  data.js  navigation.js  pagination.js  storage.js  toast.js  utils.js
services/ai_agent/: Dockerfile  config.py  main.py  nixpacks.toml  requirements.txt
services/execution_engine/: Dockerfile  config.py  main.py  nixpacks.toml  requirements.txt
services/market_data/: Dockerfile  config.py  main.py  nixpacks.toml  requirements.txt
services/monitoring/: Dockerfile  config.py  main.py  nixpacks.toml  requirements.txt
services/risk_management/: Dockerfile  config.py  main.py  nixpacks.toml  requirements.txt
services/strategy_engine/: Dockerfile  config.py  main.py  nixpacks.toml  requirements.txt
shared/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  middleware.py  redis_client.py
shared/models/: __init__.py  base.py
shared/schemas/: __init__.py  base.py
tests/: conftest.py
(+91 files in other folders)
